--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "typeface-inter": "^3.18.1",
     "vee-validate": "^4.8.2",
     "vue": "^3.2.45",
-    "vue-router": "^4.1.6"
+    "vue-router": "^4.1.6",
+    "yup": "^1.0.2"
   },
   "devDependencies": {
     "@types/node": "^18.15.3",
