--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "axios": "^1.3.4",
     "date-fns": "^2.29.3",
+    "js-cookie": "^3.0.1",
     "pinia": "^2.0.33",
     "typeface-inter": "^3.18.1",
     "vee-validate": "^4.8.2",
