--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "yup": "^1.0.2"
   },
   "devDependencies": {
+    "@types/js-cookie": "^3.0.3",
     "@types/node": "^18.15.3",
     "@vitejs/plugin-vue": "^4.0.0",
     "autoprefixer": "^10.4.14",
