--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "add": "^2.0.6",
     "axios": "^1.3.4",
     "date-fns": "^2.29.3",
     "js-cookie": "^3.0.1",
@@ -17,6 +18,8 @@
     "vee-validate": "^4.8.2",
     "vue": "^3.2.45",
     "vue-router": "^4.1.6",
+    "vue-toastification": "^2.0.0-rc.5",
+    "yarn": "^1.22.19",
     "yup": "^1.0.2"
   },
   "devDependencies": {
